# lambdacircus

./: .dockerignore  .gitignore  .travis.yml  Application.hs  FlyingCircus.cabal  Foundation.hs  Import.hs  LICENSE  LambdaCircus.cabal  Model.hs  Procfile  README.md  Settings.hs  devel.hs  stack.yaml
.halcyon/: constraints
Handler/: Quotes.hs  Root.hs
Model/: Quote.hs
client/: History.hs  LICENSE  Main.hs  Render.hs  Route.hs  Types.hs  XHR.hs  lambdacircus-client.cabal
config/: models  postgresql.yml  routes  settings.yml  sqlite.yml
deploy/: Procfile
docker/: README.rst  base.docker  build.docker  run.docker
static/js/: client.js
templates/: default-layout-wrapper.hamlet  default-layout.coffee  default-layout.hamlet  default-layout.julius  default-layout.lucius  homepage.hamlet  newquote.hamlet  normalize.lucius  quote.hamlet  quotes.hamlet
tests/: HomeTest.hs  main.hs
