name:              LambdaCircus
version:           0.0.0
license:           MIT
license-file:      LICENSE
author:            Tristan Seligmann
maintainer:        Tristan Seligmann
synopsis:          IRC quotes database
description:       It's not that hard.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          https://github.com/mithrandi/lambdacircus/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Model.Quote
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Handler.Root
                     Handler.Quotes
                     Helpers.Heroku

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                DeriveDataTypeable
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                ViewPatterns

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.4.0      && < 1.5
                 , yesod-core                    >= 1.4.0      && < 1.5
                 , yesod-auth                    >= 1.4.0      && < 1.5
                 , yesod-static                  >= 1.4.0      && < 1.5
                 , yesod-form                    >= 1.4.0      && < 1.5
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 2.0
                 , persistent                    >= 2.0        && < 2.2
                 , persistent-postgresql         >= 2.0        && < 2.2
                 , persistent-template           >= 2.0        && < 2.2
                 , template-haskell
                 , shakespeare                   >= 2.0        && < 2.1
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 3.0        && < 3.1
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  >= 2.1        && < 2.2
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 3.0        && < 3.1
                 , data-default
                 , aeson                         >= 0.6        && < 0.9
                 , conduit                       >= 1.0        && < 2.0
                 , monad-logger                  >= 0.3        && < 0.4
                 , fast-logger                   >= 2.2        && < 2.3
                 , wai-logger                    >= 2.2        && < 2.3
                 , time
                 , http-types
                 , directory
                 , unordered-containers
                 , heroku
                 , old-locale
    -- see https://github.com/yesodweb/yesod/issues/814
    if !os(windows)
        build-depends: unix

executable         LambdaCircus
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , LambdaCircus
                     , yesod

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , LambdaCircus
                 , yesod-test >= 1.4
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-postgresql
                 , resourcet
                 , monad-logger
                 , transformers
                 , hspec
